Fix layout issues on homepage

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -15,7 +15,7 @@ body {
     color:#ffffff;
     background-color:#FFB92C;
     height:4rem;
-    box-shadow:0 4px #000000aa;
+    border-bottom:4px solid #00000033;
 }
 
 #banner h1 {
@@ -28,8 +28,8 @@ body {
 }
 
 #overview {
-    z-index:-4;
-    padding:4rem 0;
+    z-index:-6rem;
+    padding:8rem 0;
     background-image:url("/images/library.png");
     background-repeat:no-repeat;
     background-position:center;
@@ -39,12 +39,14 @@ body {
 }
 
 #summary {
-    width:48%;
+    width:60%;
     float:left;
 }
 
 #summary h2 {
-    text-decoration:underline;
+    /* text-decoration:underline; */
+    text-align:left;
+    font-size:1.8rem;
 }
 
 #summary p{
@@ -66,6 +68,7 @@ body {
     padding:1rem;
     width:45%;
     margin-top:2rem;
+    background-color:#ffffff;
 }
 
 .active {
@@ -81,30 +84,31 @@ body {
 #features {
     float:left;
     width:100%;
-    margin-top:3rem;
     display:flex;
     flex-wrap:wrap;
+    padding-bottom:5rem;
 }
 
 #features .card {
     width:25%;
-    min-width:15rem;
     background-color:#FFB92C;
     float:left;
     margin-top:1rem;
-    margin-right:12%;
+    margin:3rem calc(25% / 2) 0 0;
     padding:1rem;
     color:#ffffff;
     box-shadow:8px 8px #00000033;
+    text-align:left;
+}
+
+#features .card:nth-child(even) {
+    color:#FFB92C;
+    background-color:#ffffff;
+    border:2px solid #FFB92C;
 }
 
 #features .card:nth-child(3n) {
     margin-right:0;
-    float:right;
-}
-
-#features .card h3 {
-    color: #ffffff;
 }
 
 .card ul {
@@ -116,10 +120,28 @@ body {
     margin-bottom:1rem;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1080px) {
+
+    #features .card {
+        width:45%;
+        margin:10% 10% 0 0;
+    }
 
     #summary {
         width:100%;
     }
 
+    #features .card:nth-child(2n) {
+        margin-right:inherit;
+    }
+    #features .card:nth-child(3n) {
+        margin-right:inherit;
+    }
+}
+
+@media screen and (max-width:720px) {
+
+    #features .card {
+        width:100%;
+    }
 }
